# SfM_volume_estimation

./: OpenCV_Debug.props  OpenCV_Release.props  README.md  README.txt
Data/: IMUposes.txt  K.txt  K_matlab.txt  openMVG sfm cmd linux.txt  openMVG sfm cmd.txt  openmvg.py  rawacceleration.txt  scale.txt  sensorLog_20160527T111147.txt  sensorLog_20160527T111309.txt  sensorLog_20160527T111932.txt  sensorLog_20160527T112038.txt
Data/Kalibrering och testing/CameraCalibration/: calibrationSession.mat  (+1 more)
KLTtrackerNew/: KLTtracker.sln  KLTtracker.vcxproj  KLTtracker.vcxproj.filters  SensorData.cpp  SensorData.h  SfmParse.cpp  SfmParse.h  SpaceCarving.cpp  SpaceCarving.h  SpaceCarvingMethod.cpp  SpaceCarvingMethod.h
KLTtrackerNew/high_fps_klt/: CMakeLists.txt  cl_flags.h  high_fps_klt.project  main.cpp
KLTtrackerNew/high_fps_klt/lib/: KLTTracker - kopia.cpp  KLTTracker - kopia.h  KLTTracker.cpp  KLTTracker.h  Matrix.h  common.h  definitions.h  iqmatic_defs.h  pose.cpp  pose.h
KLTtrackerNew/high_fps_klt/lib/core_structure/: Camera.cpp  Camera.h  Frame.cpp  Frame.h  Landmark.cpp  Landmark.h  PoseGraph_defs.h  ProjectionModel.cpp  ProjectionModel.h  Timepoint.cpp  Timepoint.h
SpaceCarving/: Untitled.mat  backProjection.m  findmodelfromstructure.m  getC2Wscale.m  getPlaneEquation.m  getPoseScale.m  getR.m  getRealScale.m  loadStructure.m  removeBelowGroundplane.m  space_carving_demo.m  space_carving_main.m
SpaceCarving/+spacecarving/: carve.m  findmodelmain.m  getsilhouettemain.m  loadcameradata.m  loadcameradatajson.m  project.m  showcamera.m  showscene.m  showsurface.m
(+33 files in other folders)
